--- a/www/content/themes/base/sass/_grid.scss
+++ b/www/content/themes/base/sass/_grid.scss
@@ -27,11 +27,17 @@ and open the template in the editor.
   .col{
     margin-left: 1%;
   }
+  .col-large {
+    margin-left: 5%;
+  }
   
 }
 
 .col:first-child {
   margin-left:0;
+}
+ .col-large:first-child {
+  margin-left: 0;
 }
 
 
