--- a/www/content/themes/base/sass/_type.scss
+++ b/www/content/themes/base/sass/_type.scss
@@ -13,7 +13,23 @@ a {
 //HEADERS
 
 h1 {
-  
+  font-size:26px;
+  font-size:2.6rem;
+  font-weight:900;
+  line-height:3.2rem;
+  @media all and (min-width: 50em) {
+    font-size:36px;
+    font-size:3.6rem;
+    line-height:5rem;
+  }
+  @media all and (min-width: 73em) {
+    font-size:42px;
+    font-size:4.2rem;
+    line-height:5.4rem;
+  }
+  &.entry-title {
+    margin-bottom:30px;
+  }
   &.tag-line {
     font-size:26px;
     font-size:2.6rem;
@@ -33,6 +49,10 @@ h1 {
 }
 
 h2 {
+  font-size:22px;
+  font-size:2.2rem;
+  line-height:26px;
+  line-height:2.6rem;
   &.home-col-header {
     font-size:14px;
     font-size:1.4rem;
@@ -43,9 +63,19 @@ h2 {
       font-size:1.6rem;
     }
   }
+  @media all and (min-width: 50em) {
+    font-size:24px;
+    font-size:2.4rem;
+    line-height:28px;
+    line-height:2.8rem;
+  }
 }
 
 h3 {
+  font-size:18px;
+  font-size:1.8rem;
+  line-height:22px;
+  line-height:2.2rem;
   &.small-header {
     font-size:14px;
     font-size:1.4rem;
@@ -53,6 +83,12 @@ h3 {
       font-size:16px;
       font-size:1.6rem;
     }
+  }
+  @media all and (min-width: 50em) {
+    font-size:20px;
+    font-size:2rem;
+    line-height:24px;
+    line-height:2.4rem;
   }
 }
 
@@ -96,8 +132,8 @@ h4{
 //SMALL TEXT
 
 .small-text {
-  font-size:12px;
-  font-size:1.2rem;
+  font-size:13px;
+  font-size:1.3rem;
   font-weight:500; 
   line-height:18px;
   line-height:1.8rem;
@@ -141,6 +177,12 @@ h4{
   color:$white;
 }
 
+//ITALIC GREY TEXT
+.italic-grey {
+  color:$med-grey;
+  font-style:italic;
+}
+
 
 //BUTTON STYLE
 
@@ -159,4 +201,10 @@ h4{
     font-size:16px;
     font-size:1.6rem;
   }
+}
+
+//SCREEN READER TEXT
+
+.screen-reader-text {
+  display:none;
 }
