--- a/www/content/themes/base/sass/_variables.scss
+++ b/www/content/themes/base/sass/_variables.scss
@@ -24,8 +24,11 @@ $font-size-base: 14px !default;
 
 $white : #ffffff;
 $beige : #fef3d7;
+$dark-beige : #CBC2AC;
 $light-blue : #60b4d0;
-$light-grey: #959a9e;
+$blue : #4D90A6;
+$light-grey : #959a9e;
+$med-grey : #666666;
 $grey : #313131;
 
 $body-text : $grey;
